[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Malcolm Lockyer <malcolm.lockyer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
